[gd_scene load_steps=10 format=3 uid="uid://b31234lva3qib"]

[ext_resource type="Script" uid="uid://c7v8bryamlkar" path="res://GUI/GameOverScreen/game_over_screen.gd" id="1_467e2"]
[ext_resource type="Script" uid="uid://dfop763cfyo3d" path="res://GUI/GameOverScreen/end_hs_label.gd" id="2_ox7h6"]
[ext_resource type="Script" uid="uid://c36l6y2xi5kr2" path="res://GUI/GameOverScreen/end_s_label.gd" id="3_bp7gq"]

[sub_resource type="LabelSettings" id="LabelSettings_fc0e3"]
font_size = 64

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vef74"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hve3p"]
bg_color = Color(0.528112, 0.507911, 0.508856, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mfdv2"]
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_color = Color(0, 0, 0, 0.431373)
shadow_offset = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_467e2"]
size = Vector2(368, 78)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ox7h6"]
size = Vector2(179, 78)

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_467e2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -230.5
offset_top = 31.0
offset_right = 230.5
offset_bottom = 113.0
grow_horizontal = 2
mouse_filter = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -44.0
offset_right = 85.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_fc0e3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -421.0
offset_top = -171.0
offset_right = 422.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -414.5
offset_top = -44.0
offset_right = -66.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "High Score:"
label_settings = SubResource("LabelSettings_fc0e3")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label2" type="Label" parent="Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -44.0
offset_right = 408.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_fc0e3")
vertical_alignment = 1
script = ExtResource("2_ox7h6")

[node name="Panel3" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -421.0
offset_top = -78.0
offset_right = 422.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="Panel3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -414.5
offset_top = -44.0
offset_right = -65.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "Score:"
label_settings = SubResource("LabelSettings_fc0e3")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label2" type="Label" parent="Panel3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -44.0
offset_right = 408.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_fc0e3")
vertical_alignment = 1
script = ExtResource("3_bp7gq")

[node name="Try Again" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = 55.0
offset_right = -190.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.59047, 1.59047)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vef74")

[node name="PanelContainer" type="PanelContainer" parent="Try Again"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="Selection1" type="PanelContainer" parent="Try Again/PanelContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hve3p")

[node name="MarginContainer" type="MarginContainer" parent="Try Again/PanelContainer/Selection1"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="Label" type="Label" parent="Try Again/PanelContainer/Selection1/MarginContainer"]
layout_mode = 2
text = "     Try Again     "
label_settings = SubResource("LabelSettings_mfdv2")

[node name="MarginContainer" type="MarginContainer" parent="Try Again/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="Label" type="Label" parent="Try Again/PanelContainer/MarginContainer"]
layout_mode = 2
text = "     Try Again     "
label_settings = SubResource("LabelSettings_mfdv2")

[node name="Quit" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 147.0
offset_top = 54.0
offset_right = 317.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.59047, 1.59047)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vef74")

[node name="PanelContainer2" type="PanelContainer" parent="Quit"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="Selection2" type="PanelContainer" parent="Quit/PanelContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hve3p")

[node name="MarginContainer" type="MarginContainer" parent="Quit/PanelContainer2/Selection2"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="Label" type="Label" parent="Quit/PanelContainer2/Selection2/MarginContainer"]
layout_mode = 2
text = "  Quit  "
label_settings = SubResource("LabelSettings_mfdv2")

[node name="MarginContainer" type="MarginContainer" parent="Quit/PanelContainer2"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="Label" type="Label" parent="Quit/PanelContainer2/MarginContainer"]
layout_mode = 2
text = "  Quit  "
label_settings = SubResource("LabelSettings_mfdv2")

[node name="Node2D" type="Node2D" parent="."]

[node name="TryAgainArea2D" type="Area2D" parent="Node2D"]
position = Vector2(165, 389)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/TryAgainArea2D"]
position = Vector2(174, 29)
shape = SubResource("RectangleShape2D_467e2")

[node name="QuitArea2D" type="Area2D" parent="Node2D"]
position = Vector2(772, 389)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/QuitArea2D"]
position = Vector2(85.5, 28)
shape = SubResource("RectangleShape2D_ox7h6")

[connection signal="body_entered" from="Node2D/TryAgainArea2D" to="." method="_on_try_again_area_2d_body_entered"]
[connection signal="body_exited" from="Node2D/TryAgainArea2D" to="." method="_on_try_again_area_2d_body_exited"]
[connection signal="mouse_entered" from="Node2D/TryAgainArea2D" to="." method="_on_try_again_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/TryAgainArea2D" to="." method="_on_try_again_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="Node2D/QuitArea2D" to="." method="_on_quit_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/QuitArea2D" to="." method="_on_quit_area_2d_mouse_exited"]
